# auto-translate

./: .env  .gitignore  LICENSE  README.md  create_vailla_glossary.py  glossary.json  package-lock.json  pyproject.toml  requirements.txt  run_flet_gui.py  test_auto_registration.py
docs/: SUMMARY.md  guide.md  index.md  package.json
docs/.vitepress/: config.mts
docs/en/: guide.md  index.md
docs/ko/: guide.md
easy_install/: installer.bat  run.bat  update.bat
output/FTB OceanBlock 2_korean/: modpack_translation_stats.json  modpack_translation_update_stats.json
output/packaging_output/: README.md  packaging_stats.json
src/: main.py
src/filters/: __init__.py  base.py  ftbquests.py  kubejs.py  origins.py  patchouli.py  paxi.py  puffish_skills.py  tconstruct.py
src/gui/: __init__.py  components.py  file_selection_page.py  main_browser.py  multi_api_keys_dialog.py  translation_controller.py  translation_dialogs.py  translation_logger.py  translation_page.py  translation_progress.py  translation_ui_builders.py
src/localization/: __init__.py  messages.py
src/modpack/: load.py
src/modpack_packaging/: __init__.py  base.py  ftb_quests_convert.py  jar_modifier.py  manager.py  modpack.py  resourcepack.py
src/parsers/: __init__.py  base.py  js.py  json.py  lang.py  nbt.py  snbt.py  txt.py  xml.py
src/prompts/: llm_prompts.py  vanilla_glossary_prompts.py
src/translators/: __init__.py  json_translator.py  llm_manager.py  models.py  modpack_translator.py  multi_llm_manager.py  token_counter.py  (+2 more)
tests/: README.md  test.py  test_existing_translations.py
(+240 files in other folders)
